# statTracker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
client/: CMakeLists.txt
client/src/: client.cpp
core/: CMakeLists.txt
core/src/Core/: App.cpp  App.h  Application.cpp  Application.h  ConsoleApp.h  EntryPoint.h  Layer.h  Log.cpp  Log.h  base.h
docs/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: server.cpp
tests/: AddTests.cmake  CMakeLists.txt
tests/src/ConsoleApp/: Console.cpp
tests/src/example/: example.cpp
